[project]
name = "eam-suite"
version = "0.1.0"
description = "This is a set of scripts and an example CSV file created by @neetintel on X who manages www.hfgcs.com."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astroid==3.3.11",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dill==0.4.0",
    "fonttools==4.59.1",
    "isort==6.0.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.5",
    "mccabe==0.7.0",
    "numpy==2.3.2",
    "packaging==25.0",
    "pandas==2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "pylint==3.3.8",
    "pyparsing==3.2.3",
    "pyperclip==1.9.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tomlkit==0.13.3",
    "types-pyperclip>=1.9.0.20250801",
    "types-pytz==2025.2.0.20250809",
    "tzdata==2025.2",
    "uv==0.8.12",
]
